[tool.poetry]
name = "globaleaks-docker-build-scripts"
version = "0.1.0"
description = "Scripts to automatically update GlobaLeaks docker images"
authors = ["tsundokul <timofte.daniel@tuta.io>"]

[tool.poetry.dependencies]
python = "^3.7"
docker = "^5.0.0"
apt-repo = "^0.5"
packaging = "^20.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
